objects/csord__Subscription__c.object
<CustomObject>
    <description>An accessibility model to a Service (or Services). Governs the rights to access and use a Service.</description>
    <fields>
        <fullName>UPC_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UPC Address</label>
        <referenceTo>UPC_ADBASE__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_BIFP_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BIFP Order</label>
        <referenceTo>csord__Order__c</referenceTo>
        <relationshipLabel>Subscriptions (BIFP Order)</relationshipLabel>
        <relationshipName>BIFP_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_BP_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BP Order</label>
        <referenceTo>csord__Order__c</referenceTo>
        <relationshipLabel>BP Subscriptions</relationshipLabel>
        <relationshipName>BP_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_Non_Mobile_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Non Mobile Order</label>
        <referenceTo>csord__Order__c</referenceTo>
        <relationshipLabel>Non Mobile Subscriptions</relationshipLabel>
        <relationshipName>Non_Mobile_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_Process_Terms__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <description>Used in the Orchestrator process for branching(condition steps)</description>
        <label>Process Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Send_Topnet_Customer_Info__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag if the Info Email about Topnet request being placed should be sent to the customer</description>
        <inlineHelpText>Flag if the Info Email about Topnet request being placed should be sent to the customer</inlineHelpText>
        <label>Send Topnet Customer Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Site_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site Address</label>
        <referenceTo>UPC_Site_Address__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_Site__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Site</label>
        <referenceTo>UPC_Site__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_Taifun_SAP_Id__c</fullName>
        <label>Taifun SAP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csconta__Billing_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Billing Account to use for this Subscription.</description>
        <inlineHelpText>The Billing Account to use for this Subscription.</inlineHelpText>
        <label>Billing Account</label>
        <referenceTo>csconta__Billing_Account__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csord__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Account that governs this Subscription.</description>
        <inlineHelpText>The Account that governs this Subscription.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csord__External_Identifier2__c</fullName>
        <description>External Id field used for bulk inserts of Orders &amp; Subscriptions objects.</description>
        <externalId>true</externalId>
        <inlineHelpText>External Id field used for bulk inserts of Orders &amp; Subscriptions objects.</inlineHelpText>
        <label>External Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>csord__External_Identifier__c</fullName>
        <description>DEPRECATED. External Id field used for bulk inserts of Orders &amp; Subscriptions objects.</description>
        <externalId>true</externalId>
        <inlineHelpText>DEPRECATED. Use External Identifier2 field instead.</inlineHelpText>
        <label>DEPRECATED External Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csord__Identification__c</fullName>
        <description>Identification string for the object, used as the reference from external systems.</description>
        <inlineHelpText>E.g. &quot;spokeServiceAmsterdam&quot; in Hub&amp;Spokes scenario.</inlineHelpText>
        <label>Identification</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csord__Order_Request__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Order Request object which introduced the latest changes to this object.</description>
        <inlineHelpText>Order Request object which introduced the latest changes to this object.</inlineHelpText>
        <label>Order Request</label>
        <referenceTo>csord__Order_Request__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csord__Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The parent Order of this Subscription.</description>
        <inlineHelpText>The parent Order of this Subscription.</inlineHelpText>
        <label>Order</label>
        <referenceTo>csord__Order__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csord__Solution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The parent Solution of this Subscription.</description>
        <inlineHelpText>The parent Solution of this Subscription.</inlineHelpText>
        <label>Solution</label>
        <referenceTo>csord__Solution__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csord__Status__c</fullName>
        <description>The status of the Subscription in the fulfillment process.</description>
        <inlineHelpText>Used for state transitions.</inlineHelpText>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csord__Total_One_Off_Charges__c</fullName>
        <formula>csord__Total_Service_One_Off_Charges__c + csord__Total_Sub_Line_Item_One_Off_Charges__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total One-Off Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>csord__Total_Recurring_Charges__c</fullName>
        <formula>csord__Total_Service_Recurring_Charges__c + csord__Total_Sub_Line_Item_Recurring_Charges__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Recurring Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>csord__Total_Service_One_Off_Charges__c</fullName>
        <description>Sum of all the one off charges on all of the subscription’s services</description>
        <inlineHelpText>Sum of all the one off charges on all of the subscription’s services</inlineHelpText>
        <label>Total Service One-Off Charges</label>
        <summarizedField>csord__Service__c.csord__Total_One_Off_Charges__c</summarizedField>
        <summaryForeignKey>csord__Service__c.csord__Subscription__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>csord__Total_Service_Recurring_Charges__c</fullName>
        <description>Sum of all the recurring charges on all of the subscription’s services</description>
        <inlineHelpText>Sum of all the recurring charges on all of the subscription’s services</inlineHelpText>
        <label>Total Service Recurring Charges</label>
        <summarizedField>csord__Service__c.csord__Total_Recurring_Charges__c</summarizedField>
        <summaryForeignKey>csord__Service__c.csord__Subscription__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>csord__Total_Sub_Line_Item_One_Off_Charges__c</fullName>
        <description>Sum of all the one-off charges of the subscription’s subscription line items</description>
        <inlineHelpText>Sum of all the one-off charges of the subscription’s subscription line items</inlineHelpText>
        <label>Total Sub. Line Item One-Off Charges</label>
        <summarizedField>csord__Subscription_Line_Item__c.csord__Total_Price__c</summarizedField>
        <summaryFilterItems>
            <field>csord__Subscription_Line_Item__c.csord__Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>csord__Subscription_Line_Item__c.csord__Is_Recurring__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>csord__Subscription_Line_Item__c.csord__Subscription__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>csord__Total_Sub_Line_Item_Recurring_Charges__c</fullName>
        <description>Sum of all the recurring charges of the subscription’s subscription line items</description>
        <inlineHelpText>Sum of all the recurring charges of the subscription’s subscription line items</inlineHelpText>
        <label>Total Sub. Line Item Recurring Charges</label>
        <summarizedField>csord__Subscription_Line_Item__c.csord__Total_Price__c</summarizedField>
        <summaryFilterItems>
            <field>csord__Subscription_Line_Item__c.csord__Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>csord__Subscription_Line_Item__c.csord__Is_Recurring__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>csord__Subscription_Line_Item__c.csord__Subscription__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>csord__annual_contract_value__c</fullName>
        <label>Annual Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>csord__order_product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Product</label>
        <referenceTo>csord__Order_Product__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csord__total_contract_value__c</fullName>
        <label>Total Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Cancelled_By_Change_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancelled By Change Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Change_Type__c</fullName>
        <label>Change Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
                <value>
                    <fullName>Downgrade</fullName>
                </value>
                <value>
                    <fullName>Relocation</fullName>
                </value>
                <value>
                    <fullName>Cease</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>csordtelcoa__Closed_Replaced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed Replaced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Product_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Configuration</label>
        <referenceTo>cscfga__Product_Configuration__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Replaced_Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Replaced Subscription</label>
        <referenceTo>csord__Subscription__c</referenceTo>
        <relationshipLabel>Replacement Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Replacement_Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Replacement Subscription</label>
        <referenceTo>csord__Subscription__c</referenceTo>
        <relationshipLabel>Replaced Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Subscription_Number_Sequence__c</fullName>
        <displayFormat>{000000000}</displayFormat>
        <label>Subscription Number Sequence</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Subscription_Number__c</fullName>
        <label>Subscription Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Subscription</label>
    <listViews>
        <fullName>csord__All</fullName>
        <columns>NAME</columns>
        <columns>csord__Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Subscription Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>